--- a/lab1/app/src/main/AndroidManifest.xml
+++ b/lab1/app/src/main/AndroidManifest.xml
@@ -13,13 +13,27 @@
         android:theme="@style/Theme.Lab1"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".BmiActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".KcalActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".RecipiesActivity"
+            android:exported="true">
         </activity>
     </application>
 
