--- a/lab1/app/build.gradle
+++ b/lab1/app/build.gradle
@@ -26,6 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -34,7 +37,11 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.core
     testImplementation libs.junit
+    testImplementation libs.mockito.core
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation libs.robolectric
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 }
