--- a/lab1/app/src/main/AndroidManifest.xml
+++ b/lab1/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Lab1"
         tools:targetApi="31">
         <activity
+            android:name=".BmiProgressActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".HomeActivity"
             android:exported="true">
             <intent-filter>
@@ -21,20 +25,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".BmiActivity"
-            android:exported="true">
-        </activity>
-
+            android:exported="true"></activity>
         <activity
             android:name=".KcalActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".RecipiesActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
