--- a/lab1/gradle/libs.versions.toml
+++ b/lab1/gradle/libs.versions.toml
@@ -10,7 +10,10 @@ activity = "1.8.0"
 constraintlayout = "2.1.4"
 core = "1.5.0"
 mockitoCore = "3.12.4"
+mpandroidchart = "v3.1.0"
 robolectric = "4.7"
+kotlin = "1.9.0"
+coreKtx = "1.12.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -24,7 +27,9 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 core = { group = "androidx.test", name = "core", version.ref = "core" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
+core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
+jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 
