--- a/lab1/settings.gradle
+++ b/lab1/settings.gradle
@@ -9,15 +9,19 @@ pluginManagement {
         }
         mavenCentral()
         gradlePluginPortal()
+        jcenter()
     }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        maven {url 'https://jitpack.io'}
         google()
         mavenCentral()
+        jcenter()
     }
 }
 
 rootProject.name = "lab1"
 include ':app'
+include ':kotlinexercises'
